--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
   right: 20px;
   z-index: 2;
   font-size: 1rem;
+  padding-bottom: 20px; /* ← this extends hover area downward */
 }
+
 
 /* Button */
 #menu-button {
