--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
 /* Button */
 #menu-button {
-  background-color: #f4d35e;
-  border: none;
-  padding: 10px 16px;
-  font-weight: bold;
+  
+   <img src="/images/farfallepainting.png" style="max-width: 5%; max-height: 5vh; object-fit: contain;" alt="Farfalle Painting">
+ 
+  
   cursor: pointer;
-  border-radius: 5px;
+  
 }
 
 /* Dropdown */
