--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
 }
 
 
-/* Button */
 #menu-button {
-  
-   <img src="/images/farfallepainting.png" style="max-width: 5%; max-height: 5vh; object-fit: contain;" alt="Farfalle Painting">
- 
-  
+  background-color: #f4d35e;
+  border: none;
+  padding: 10px 16px;
+  font-weight: bold;
   cursor: pointer;
-  
+  border-radius: 5px;
 }
 
 /* Dropdown */
