--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
       }
     }
 
-  #menu-container {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  z-index: 2;
-  font-size: 1rem;
-  padding-bottom: 20px; /* ← this extends hover area downward */
-}
-
-
 #menu-button {
-  background-color: #f4d35e;
+  background: none;
   border: none;
-  padding: 10px 16px;
-  font-weight: bold;
+  padding: 0;
   cursor: pointer;
-  border-radius: 5px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;    /* control icon size */
+  height: 40px;
 }
+
+#menu-button img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 
 /* Dropdown */
 #dropdown-menu {
