--- a/index.html
+++ b/index.html
@@ -115,13 +115,16 @@
 
   <!-- MENU HTML -->
   <div id="menu-container">
-    <button id="menu-button">Menu</button>
+    <div id="menu-button">
+      <img src="images/d.png" alt="Menu Icon" />
+    </div>
     <div id="dropdown-menu">
       <a href="#section1">Top</a>
       <a href="#section2">Image</a>
       <a href="#section3">Bottom</a>
     </div>
   </div>
+
 
   <!-- SKETCH CONTAINER -->
   <div id="sketch-container"></div>
