--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+now nothing shows up, heres the full html, what wrong - <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -59,13 +59,6 @@
       }
     }
 
-#menu-container {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  z-index: 10;
-}
-
 #menu-button {
   background: none;
   border: none;
@@ -74,7 +67,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
+  width: 40px;    /* control icon size */
   height: 40px;
 }
 
@@ -84,6 +77,7 @@
   display: block;
 }
 
+
 /* Dropdown */
 #dropdown-menu {
   display: none;
@@ -92,8 +86,8 @@
   right: 0;
   background-color: white;
   border: 1px solid #ccc;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.1);
-  z-index: 20;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
+  z-index: 3;
   border-radius: 5px;
 }
 
@@ -110,11 +104,10 @@
   background-color: #f4d35e;
 }
 
-/* Show dropdown on hover */
+/* Keep dropdown visible on hover */
 #menu-container:hover #dropdown-menu {
   display: block;
 }
-
 
   </style>
 </head>
@@ -122,13 +115,16 @@
 
   <!-- MENU HTML -->
   <div id="menu-container">
-    <button id="menu-button">Menu</button>
+    <div id="menu-button">
+      <img src="images/d.png" alt="Menu Icon" />
+    </div>
     <div id="dropdown-menu">
       <a href="#section1">Top</a>
       <a href="#section2">Image</a>
       <a href="#section3">Bottom</a>
     </div>
   </div>
+
 
   <!-- SKETCH CONTAINER -->
   <div id="sketch-container"></div>
