--- a/index.html
+++ b/index.html
@@ -112,16 +112,17 @@
 <body>
 
   <!-- MENU HTML -->
-  <div id="menu-container">
-    <div id="menu-button">
-      <img src="images/farfalle.png" alt="Menu" />
-    </div>
-    <div id="dropdown-menu">
-      <a href="#section1">Top</a>
-      <a href="#section2">Image</a>
-      <a href="#section3">Bottom</a>
-    </div>
+<div id="menu-container">
+  <div id="menu-button">
+    <img src="images/farfalle.png" alt="Menu Icon" />
   </div>
+  <div id="dropdown">
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </div>
+</div>
+
 
   <!-- SKETCH CONTAINER -->
   <div id="sketch-container"></div>
