--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
   <div id="menu-button">
     <img src="images/farfalle.png" alt="Menu Icon" />
   </div>
-  <div id="dropdown">
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </div>
+ <div id="dropdown-menu">
+  <a href="#about">About</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</div>
+
 </div>
 
 
