--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div id="sketch-container"></div>
 
   <!-- PAGE CONTENT -->
-  <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
+  <div class="section" id="section1"><div class="section-content">Farflle</div></div>
 
   <div class="section" id="section2">
     <div class="section-content">
