--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 #dropdown-menu {
   display: none;
   position: absolute;
-  top: 100%;
+  top: 100%;   /* <== this makes it attach directly to the button */
   right: 0;
   background-color: white;
   border: 1px solid #ccc;
