--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
   </div>
 
-  <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
+  <div class="section" id="section3"><div class="section-content">Go fck yourself</div></div>
 
   <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
