--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <style>
     body {
-      margin: 0; 
+      margin: 0;
       background-color: #f8f8f2;
       font-family: 'Georgia', 'Arial Black', sans-serif;
       font-weight: 700;
@@ -83,7 +83,7 @@
 #dropdown-menu {
   display: none;
   position: absolute;
-  top: 100%;   /* <== this makes it attach directly to the button */
+  top: 100%;
   right: 0;
   background-color: white;
   border: 1px solid #ccc;
@@ -131,7 +131,7 @@
   <div id="sketch-container"></div>
 
   <!-- PAGE CONTENT -->
-  <div class="section" id="section1"><div class="section-content">Farflle</div></div>
+  <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
 
   <div class="section" id="section2">
     <div class="section-content">
@@ -139,7 +139,7 @@
     </div>
   </div>
 
-  <div class="section" id="section3"><div class="section-content">Go fck yourself</div></div>
+  <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
 
   <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
