--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 /* Button */
 #menu-button {
-  background-color: #f4d35e;
+  background-color: #000000;
   border: none;
   padding: 10px 16px;
   font-weight: bold;
