--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 <body>
 
   <!-- MENU HTML -->
- <div id="menu-container">
-  <button id="menu-button">Menu</button>
+<div id="menu-container">
+  <img id="menu-icon" src="/images/menu-icon.png" alt="Menu">
   <div id="dropdown-menu">
     <a href="#section1">Top</a>
     <a href="#section2">Image</a>
