--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
 
 
 /* Button */
-#menu-button {
-  background-color: #000000;
-  border: none;
-  padding: 10px 16px;
-  font-weight: bold;
+#menu-icon {
+  width: 40px; /* Adjust to match your image dimensions */
+  height: 40px; /* Adjust to match your image dimensions */
   cursor: pointer;
-  border-radius: 5px;
+  display: block; /* Ensure it behaves like the button did */
 }
 
 /* Dropdown */
