--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div id="sketch-container"></div>
 
   <!-- PAGE CONTENT -->
-  <div class="section" id="section1"><div class="section-content">Farfalle</div></div>
+  <div class="section" id="section1"><div class="section-content">The Food Gallery</div></div>
 
   <div class="section" id="section2">
     <div class="section-content">
@@ -145,7 +145,7 @@
     </div>
   </div>
 
-  <div class="section" id="section3"><div class="section-content">Go fuck yourself</div></div>
+  <div class="section" id="section3"><div class="section-content"></div></div>
 
   <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
