--- a/index.html
+++ b/index.html
@@ -134,19 +134,6 @@
   </div>
 
   <!-- SKETCH CONTAINER -->
-  <div id="sketch-container"></div>
-
-  <!-- PAGE CONTENT -->
-  <div class="section" id="section1"><div class="section-content">The Food Gallery</div></div>
-
-  <div class="section" id="section2">
-    <div class="section-content">
-      <img src="/images/farfallepainting.png" style="max-width: 70%; max-height: 70vh; object-fit: contain;" alt="Farfalle Painting">
-    </div>
-  </div>
-
-  <div class="section" id="section3"><div class="section-content"></div></div>
-
   <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
   <script>
@@ -191,7 +178,7 @@
 
       fill(fadedColor);
       textFont(customFont);
-      text('Farfalle', width / 2, height / 2);
+      text('The Food Gallery', width / 2, height / 2); // THIS IS THE LINE THAT NEEDED TO CHANGE
 
       for (let icon of icons) {
         let imgWidth = 50;
