--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </div>
 
   <!-- SKETCH CONTAINER -->
-  <!-- P5 SCRIPT -->
+  <!-- P5 SCRIPT --></script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
   <script>
     let farfalleImg;
@@ -248,7 +248,7 @@
         speedMultiplier = 1.0;
       }, 150);
     }, { passive: true });
-    }
+    
   </script>
 
 </body>
