--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ now i want to take this site and turn it into an old sit but updated, but i want
 
       fill(fadedColor);
       textFont(customFont);
-      text('Farfalle', width / 2, height / 2);
+      text('The Food Gallery', width / 2, height / 2);
 
       for (let icon of icons) {
         let imgWidth = 50;
