--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-now i want to take this site and turn it into an old sit but updated, but i want to use this layout as the core structure of the site, first im trying to change the name of the site from farfalle to the food gallery but when im doing it its not changing the website- heres the html, is something wrong- <!DOCTYPE html>
+hahaha you are a herb- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
