--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ hahaha you are a herb- <!DOCTYPE html>
       background('#f8f8f2');
 
       let topColor = color(0);
-      let bottomColor = color('#f4d35e');
+      let bottomColor = color('#c72a2a');
       let fadeAmt = constrain(mouseY / height, 0, 1);
       let fadedColor = lerpColor(topColor, bottomColor, fadeAmt);
 
